--- a/package.json
+++ b/package.json
@@ -25,8 +25,14 @@
     "@typescript-eslint/parser": "^5.36.2",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.7",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
+    "prettier": "^2.7.1",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.2"
   },
