--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,5 +47,10 @@ allprojects {
         }
         google()
         maven { url 'https://www.jitpack.io' }
+        jcenter(){
+            content {
+                includeModule("com.yqritc", "android-scalablevideoview")
+            }
+        }
     }
 }
